--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.MarvelCharcaters" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.MarvelCharcaters" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/primary_color</item>
         <item name="colorPrimaryVariant">@color/primary_darker</item>
@@ -12,5 +12,29 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+    </style>
+
+    <style name="SearchViewStyle" parent="Widget.AppCompat.SearchView">
+        <item name="searchIcon">@drawable/ic_search_default</item>
+        <item name="closeIcon">@null</item>
+        <item name="goIcon">@drawable/ic_search_default</item>
+        <item name="commitIcon">@drawable/ic_search_default</item>
+        <item name="android:editTextColor">@color/search_edittext_hint_color</item>
+        <item name="android:textColorHint">@color/search_edittext_hint_color</item>
+        <item name="android:colorPressedHighlight">@null</item>
+        <item name="android:iconifiedByDefault">false</item>
+        <item name="android:drawableStart">@drawable/ic_search_focused</item>
+        <item name="android:textCursorDrawable">@drawable/cursor_color</item>
+        <item name="android:textColorHighlight">@color/search_edittext_cursor_color</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:drawablePadding">10dp</item>
+        <item name="queryBackground">@drawable/search_edittext_background</item>
+        <item name="searchHintIcon">@null</item>
+        <item name="queryHint">@string/Search_Hint</item>
+    </style>
+
+    <style name="CustomTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:windowTranslucentNavigation">true</item>
     </style>
 </resources>
