--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -43,7 +43,8 @@
 
     <!--    font sizes-->
     <dimen name="character_item_font_size">24sp</dimen>
-    <dimen name="details_title_font_size">24sp</dimen>
+    <dimen name="details_title_font_size">30sp</dimen>
+    <dimen name="content_details_title_font_size">16sp</dimen>
 
 
 </resources>
