--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -7,7 +7,7 @@
     android:background="@color/black"
     android:fitsSystemWindows="true"
     android:visibility="visible"
-    tools:context=".ui.DetailsFragment"
+    tools:context=".ui.details.DetailsFragment"
     tools:showPaths="true">
 
 
