--- a/app/src/main/res/layout/fragment_home_list.xml
+++ b/app/src/main/res/layout/fragment_home_list.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/home_screen_background_color"
-    tools:context=".ui.HomeListFragment">
+    tools:context=".ui.home.HomeListFragment">
 
     <View
         android:id="@+id/statusBarView"
