--- a/app/src/main/res/layout/posters_item.xml
+++ b/app/src/main/res/layout/posters_item.xml
@@ -7,12 +7,12 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
-        android:layout_width="80dp"
-        android:layout_height="120dp"
+        android:layout_width="@dimen/poster_item_width"
+        android:layout_height="@dimen/poster_item_height"
         android:layout_margin="@dimen/card_view_margin"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="@dimen/space_from_borders"
+        android:layout_marginTop="@dimen/space_from_borders"
+        android:layout_marginEnd="@dimen/space_from_borders"
         android:innerRadius="0dp"
         android:shape="ring"
         app:cardCornerRadius="@dimen/card_character_corner_radius"
@@ -25,6 +25,7 @@
             android:id="@+id/posterImage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:scaleType="centerCrop"
             tools:srcCompat="@tools:sample/avatars" />
     </androidx.cardview.widget.CardView>
 
@@ -32,11 +33,10 @@
         android:id="@+id/PosterTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="TextView"
+        android:layout_marginStart="@dimen/space_from_borders"
+        android:layout_marginTop="@dimen/space_from_borders"
+        android:layout_marginEnd="@dimen/space_from_borders"
+        android:layout_marginBottom="@dimen/space_from_borders"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
