--- a/app/src/main/res/navigation/nav_app.xml
+++ b/app/src/main/res/navigation/nav_app.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/homeListFragment"
-        android:name="com.amin.marvelcharcaters.ui.HomeListFragment"
+        android:name="com.amin.marvelcharcaters.ui.home.HomeListFragment"
         android:label="fragment_home_list"
         tools:layout="@layout/fragment_home_list" >
         <action
@@ -16,12 +16,13 @@
     </fragment>
     <fragment
         android:id="@+id/detailsFragment"
-        android:name="com.amin.marvelcharcaters.ui.DetailsFragment"
+        android:name="com.amin.marvelcharcaters.ui.details.DetailsFragment"
         android:label="fragment_details"
         tools:layout="@layout/fragment_details" >
         <action
             android:id="@+id/actionGetBackToDetails"
-            app:destination="@id/homeListFragment" />
+            app:destination="@id/homeListFragment"
+            app:popUpTo="@+id/homeListFragment"/>
         <argument
             android:name="character?"
             app:argType="com.amin.marvelcharcaters.model.CharacterResult"
