implement DetailsScreen -->  done

--- a/app/src/main/res/layout/posters_item.xml
+++ b/app/src/main/res/layout/posters_item.xml
@@ -2,19 +2,14 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="@dimen/poster_item_width"
+    android:layout_margin="@dimen/card_view_margin"
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="@dimen/poster_item_width"
         android:layout_height="@dimen/poster_item_height"
-        android:layout_margin="@dimen/card_view_margin"
-        android:layout_marginStart="@dimen/space_from_borders"
-        android:layout_marginTop="@dimen/space_from_borders"
-        android:layout_marginEnd="@dimen/space_from_borders"
-        android:innerRadius="0dp"
-        android:shape="ring"
         app:cardCornerRadius="@dimen/card_character_corner_radius"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,10 +28,12 @@
         android:id="@+id/PosterTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:maxLines="2"
         android:layout_marginStart="@dimen/space_from_borders"
         android:layout_marginTop="@dimen/space_from_borders"
         android:layout_marginEnd="@dimen/space_from_borders"
         android:layout_marginBottom="@dimen/space_from_borders"
+        android:textColor="@color/details_character_name_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
