--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -12,6 +12,7 @@
     <dimen name="card_view_margin">6dp</dimen>
     <dimen name="card_corner_radius">4dp</dimen>
     <dimen name="card_character_corner_radius">24dp</dimen>
+    <dimen name="card_poster_corner_radius">8dp</dimen>
     <dimen name="card_search_corner_radius">24dp</dimen>
 
 
@@ -33,8 +34,8 @@
     <dimen name="character_item_height">150dp</dimen>
     <dimen name="search_item_height">70dp</dimen>
     <dimen name="search_item_width">70dp</dimen>
-    <dimen name="poster_item_width">70dp</dimen>
-    <dimen name="poster_item_height">120dp</dimen>
+    <dimen name="poster_item_width">80dp</dimen>
+    <dimen name="poster_item_height">160dp</dimen>
 
 
 
