--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -6,7 +6,8 @@
     <dimen name="space_from_borders_card">2dp</dimen>
     <dimen name="space_from_top_back">80dp</dimen>
     <dimen name="space_from_top_details_title">16dp</dimen>
-    <dimen name="space_from_top_description_title">24dp</dimen>
+    <dimen name="space_from_home_loading_bottom">16dp</dimen>
+    <dimen name="space_from_top_description_title">30dp</dimen>
 
 
     <dimen name="card_view_margin">6dp</dimen>
@@ -48,6 +49,7 @@
     <dimen name="character_item_font_size">24sp</dimen>
     <dimen name="details_title_font_size">30sp</dimen>
     <dimen name="content_details_title_font_size">16sp</dimen>
+    <dimen name="error_font_size">20sp</dimen>
 
 
 </resources>
