--- a/app/src/main/res/layout/fragment_home_list.xml
+++ b/app/src/main/res/layout/fragment_home_list.xml
@@ -104,9 +104,9 @@
             android:id="@+id/charactersRV"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginStart="@dimen/space_from_borders"
+            android:layout_marginEnd="@dimen/space_from_borders"
+            android:layout_marginBottom="@dimen/space_from_borders"
             android:visibility="visible"
             app:layout_constraintBottom_toTopOf="@+id/avi"
             app:layout_constraintEnd_toEndOf="parent"
