--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -69,6 +69,7 @@
         android:layout_marginStart="@dimen/space_from_borders"
         android:layout_marginTop="@dimen/space_from_borders"
         android:layout_marginEnd="@dimen/space_from_borders"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/avi"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
