--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -9,6 +9,7 @@
     <dimen name="space_from_home_loading_bottom">16dp</dimen>
     <dimen name="space_from_top_description_title">16dp</dimen>
     <dimen name="space_from_bottom_in_details_screen">20dp</dimen>
+    <dimen name="space_for_splash_logo_size">32dp</dimen>
 
 
 
