--- a/app/src/main/res/layout/details_content_item.xml
+++ b/app/src/main/res/layout/details_content_item.xml
@@ -9,7 +9,6 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/space_from_borders"
-        android:text="TextView"
         android:textColor="@color/details_item_title_color"
         android:textSize="@dimen/content_details_title_font_size"
         app:layout_constraintEnd_toEndOf="parent"
@@ -20,8 +19,8 @@
         android:id="@+id/contentRV"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginTop="@dimen/space_from_borders"
+        android:layout_marginBottom="@dimen/space_from_borders"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
