--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -2,6 +2,7 @@
 
 <resources>
 
+<!--     margin and padding -->
     <dimen name="space_from_borders">8dp</dimen>
     <dimen name="space_from_borders_card">2dp</dimen>
     <dimen name="space_from_top_back">70dp</dimen>
@@ -9,22 +10,16 @@
     <dimen name="space_from_home_loading_bottom">16dp</dimen>
     <dimen name="space_from_top_description_title">16dp</dimen>
     <dimen name="space_from_bottom_in_details_screen">20dp</dimen>
+    <dimen name="card_view_margin">6dp</dimen>
+    <dimen name="padding_for_character_title_item">5dp</dimen>
+
+
+<!--    sizes -->
     <dimen name="space_for_splash_logo_size">32dp</dimen>
 
 
 
-    <dimen name="card_view_margin">6dp</dimen>
-    <dimen name="card_corner_radius">4dp</dimen>
-    <dimen name="card_character_corner_radius">24dp</dimen>
-    <dimen name="card_poster_corner_radius">8dp</dimen>
-    <dimen name="card_search_corner_radius">24dp</dimen>
-
-
-
-    <dimen name="card_elevation">2dp</dimen>
-    <dimen name="paddinf_for_character_title_item">5dp</dimen>
-
-
+<!--    height and width-->
     <dimen name="cursor_width">1dp</dimen>
     <dimen name="appBar_height">70dp</dimen>
     <dimen name="logo_height">70dp</dimen>
@@ -32,8 +27,6 @@
     <dimen name="details_header_height">250dp</dimen>
     <dimen name="details_back_height">40dp</dimen>
     <dimen name="details_back_width">70dp</dimen>
-
-
     <dimen name="character_item_height">150dp</dimen>
     <dimen name="search_item_height">70dp</dimen>
     <dimen name="search_item_width">70dp</dimen>
@@ -41,17 +34,30 @@
     <dimen name="poster_item_height">160dp</dimen>
 
 
-
+<!--    corners radius -->
     <dimen name="search_background_radius">18dp</dimen>
     <dimen name="appBar_radius">14dp</dimen>
+    <dimen name="card_corner_radius">4dp</dimen>
+    <dimen name="card_character_corner_radius">24dp</dimen>
+    <dimen name="card_poster_corner_radius">8dp</dimen>
+    <dimen name="card_search_corner_radius">24dp</dimen>
 
+<!--    cards elevation-->
 
+    <dimen name="card_elevation">2dp</dimen>
 
     <!--    font sizes-->
     <dimen name="character_item_font_size">24sp</dimen>
     <dimen name="details_title_font_size">30sp</dimen>
     <dimen name="content_details_title_font_size">16sp</dimen>
     <dimen name="error_font_size">20sp</dimen>
+
+
+<!--    for blur radius -->
+    <dimen name="character_name_background">20dp</dimen>
+    <dimen name="splash_background">25dp</dimen>
+    <dimen name="home_background">10dp</dimen>
+    <dimen name="details_background">20dp</dimen>
 
 
 </resources>
