--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,8 +3,8 @@
     <color name="primary_color">#232121</color>
     <color name="secondary_color">#232121</color>
     <color name="primary_darker">#232121</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="default_black">#1b1b1b</color>
+    <color name="lighter_black">#232121</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
